--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,17 @@ services:
       - ./app:/app
     command: >
       sh -c "python manage.py runserver 0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=drf_recipe
+      - DB_USER=db_user
+      - DB_PASS=changetosecret
+    depends_on:
+      - db
+
+  db:
+    image: postgres:13-alpine
+    environment:
+      - POSTGRES_DB=drf_recipe
+      - POSTGRES_USER=db_user
+      - POSTGRES_PASSWORD=changetosecret
