--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django>=3.2.7,<3.3.0
 djangorestframework>=3.12.0,<3.13.0
 psycopg2-binary>=2.9.0,<3.0.0
+Pillow>=8.4.0, <9.0.0
 
 flake8>=3.6.0,<3.7
